# dist_threaded_server

./: .gitignore  Cargo.toml  readme.md
results/: client1.txt  client10.txt  client100.txt  client100copy.txt  client100secondcopy.txt  client101.txt  client101copy.txt  client101secondcopy.txt  client102.txt  client102copy.txt  client102secondcopy.txt  client103.txt  client103copy.txt  client103secondcopy.txt  client104.txt  client104copy.txt  client104secondcopy.txt  client105.txt  client105copy.txt  client105secondcopy.txt  client106.txt  client106copy.txt  client106secondcopy.txt  client107.txt  client107copy.txt  client107secondcopy.txt  client108.txt  client108copy.txt  client108secondcopy.txt  client109.txt  client109copy.txt  client109secondcopy.txt  client10copy.txt  client10secondcopy.txt  client11.txt  client110.txt  client110copy.txt  client110secondcopy.txt  client111.txt  client111copy.txt  (+1461 more)
servers_results/: server0_firstRun.txt  server0_secondrun.txt  server0_thirdrun.txt  server1_firstRun.txt  server1_secondrun.txt  server1_thirdrun.txt  server2_secondrun.txt  server2_thirdrun.txt  server2firstRun.txt
src/: client.rs  main.rs  middleware.rs  profiler.sh  readme.md  test.rs  thread_pool.rs
