[package]
name = "dist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse= "1.5.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "rt"] }
futures = "0.3.25"
http = "0.2.8"
rand = "0.8.5"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "middleware"
path = "src/middleware.rs"
